# Mondroid

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cellwidget.cpp  cellwidget.h  droidwidget.cpp  droidwidget.h  gridwidget.cpp  gridwidget.h  initthread.cpp  initthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scrollarea.cpp  scrollarea.h  statusbar.cpp  statusbar.h  toolbar.cpp  toolbar.h
src/device/: adbclient.cpp  adbclient.h  deviceinfo.cpp  deviceinfo.h  fastvideothread.cpp  fastvideothread.h  fbinfo.h  videothread.cpp  videothread.h
